[gd_scene load_steps=80 format=3 uid="uid://w1rdpmbg4qfm"]

[ext_resource type="Texture2D" uid="uid://dj00g2fwp5jv1" path="res://Art/Enemies/Enemy Giant/Enemy Giant Standing.png" id="1_eayay"]
[ext_resource type="Texture2D" uid="uid://dxwc1okf4km5n" path="res://Art/Enemies/Enemy Giant/Attack/Enemy Giant Attack-Sheet.png" id="1_llq3w"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/scottish_giant.gd" id="1_twu0j"]
[ext_resource type="Texture2D" uid="uid://dnjp6lpqbvjq0" path="res://Art/Enemies/Enemy Giant/Death No Gore/Enemy Giant Death No Gore-Sheet.png" id="2_70jdd"]
[ext_resource type="Texture2D" uid="uid://cw2kcfocdvehm" path="res://Art/Enemies/Enemy Giant/Walk/Enemy Giant Walk-Sheet.png" id="4_o6l8j"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/finite_state_machine.gd" id="5_q5ciu"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/idle.gd" id="6_ojpjm"]
[ext_resource type="PackedScene" uid="uid://cm28ftmarv0qi" path="res://VFX/collection_expolsion/damage.tscn" id="6_yh2nl"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/follow.gd" id="7_trmrx"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/melee_attack.gd" id="9_c1gms"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/rock_throw.gd" id="10_tyopb"]
[ext_resource type="PackedScene" uid="uid://nik3xnpabv5l" path="res://Scenes/enemys/Boss/boss_rock.tscn" id="11_1jyjx"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/dash.gd" id="12_mfomk"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/buff.gd" id="13_l3eq0"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/summon.gd" id="14_5rd7g"]
[ext_resource type="PackedScene" uid="uid://618x4cs781ri" path="res://Scenes/enemys/Foot_Soldier/Foot_Soldier.tscn" id="15_khsfs"]
[ext_resource type="PackedScene" uid="uid://cock7nvcnmq6e" path="res://Scenes/enemys/Cross_Bow_Soldier/Cross_Bow_Soldier.tscn" id="16_p1qas"]
[ext_resource type="Script" path="res://Scenes/enemys/Boss/death.gd" id="17_jfo0l"]
[ext_resource type="PackedScene" uid="uid://cer4infdssnfg" path="res://VFX/collection_expolsion/buff.tscn" id="17_qctr4"]
[ext_resource type="PackedScene" uid="uid://ox1hjt0u1oje" path="res://VFX/collection_expolsion/boss_damage.tscn" id="20_tuhxs"]
[ext_resource type="AudioStream" uid="uid://qbnkkc40ikxn" path="res://Audio/vfx_sounds/mixkit-sword-slash-swoosh-1476.mp3" id="21_ihdrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yaj8y"]
atlas = ExtResource("1_llq3w")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl57f"]
atlas = ExtResource("1_llq3w")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3uyr"]
atlas = ExtResource("1_llq3w")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_o68c1"]
atlas = ExtResource("1_llq3w")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtdkv"]
atlas = ExtResource("1_llq3w")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_4te3b"]
atlas = ExtResource("1_llq3w")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j6of"]
atlas = ExtResource("2_70jdd")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8ov5"]
atlas = ExtResource("2_70jdd")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylumx"]
atlas = ExtResource("2_70jdd")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqp4g"]
atlas = ExtResource("2_70jdd")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f3u2"]
atlas = ExtResource("2_70jdd")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxb3e"]
atlas = ExtResource("2_70jdd")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw8rg"]
atlas = ExtResource("2_70jdd")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a1ir"]
atlas = ExtResource("2_70jdd")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3hwe"]
atlas = ExtResource("2_70jdd")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui4cv"]
atlas = ExtResource("2_70jdd")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs5nh"]
atlas = ExtResource("2_70jdd")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5uxn"]
atlas = ExtResource("2_70jdd")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvrwd"]
atlas = ExtResource("2_70jdd")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ien4e"]
atlas = ExtResource("2_70jdd")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpitn"]
atlas = ExtResource("2_70jdd")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnx20"]
atlas = ExtResource("2_70jdd")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_r36hv"]
atlas = ExtResource("2_70jdd")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1y5b"]
atlas = ExtResource("2_70jdd")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s0m4"]
atlas = ExtResource("2_70jdd")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdvuv"]
atlas = ExtResource("2_70jdd")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqil2"]
atlas = ExtResource("2_70jdd")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8jca"]
atlas = ExtResource("2_70jdd")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2rlw"]
atlas = ExtResource("2_70jdd")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_l25cp"]
atlas = ExtResource("2_70jdd")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_n24rt"]
atlas = ExtResource("2_70jdd")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ajny"]
atlas = ExtResource("2_70jdd")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksits"]
atlas = ExtResource("2_70jdd")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctr57"]
atlas = ExtResource("2_70jdd")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgxop"]
atlas = ExtResource("2_70jdd")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkbbl"]
atlas = ExtResource("2_70jdd")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd5bc"]
atlas = ExtResource("2_70jdd")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tulj"]
atlas = ExtResource("2_70jdd")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_0og7s"]
atlas = ExtResource("2_70jdd")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng6c7"]
atlas = ExtResource("1_eayay")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6l36"]
atlas = ExtResource("4_o6l8j")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q2ul"]
atlas = ExtResource("4_o6l8j")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp685"]
atlas = ExtResource("4_o6l8j")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqmlv"]
atlas = ExtResource("4_o6l8j")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqc6u"]
atlas = ExtResource("4_o6l8j")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq3n"]
atlas = ExtResource("4_o6l8j")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru3ey"]
atlas = ExtResource("4_o6l8j")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_2olb3"]
atlas = ExtResource("4_o6l8j")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7xoh"]
atlas = ExtResource("4_o6l8j")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_xijh7"]
atlas = ExtResource("4_o6l8j")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_mslov"]
atlas = ExtResource("4_o6l8j")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh8il"]
atlas = ExtResource("4_o6l8j")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3djh"]
atlas = ExtResource("4_o6l8j")
region = Rect2(5376, 0, 448, 448)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5cjf"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_yaj8y")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_hl57f")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_f3uyr")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_o68c1")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_jtdkv")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_4te3b")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j6of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8ov5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylumx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqp4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f3u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxb3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw8rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a1ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3hwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui4cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs5nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5uxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvrwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ien4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpitn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnx20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r36hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1y5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s0m4")
}, {
"duration": 20.0,
"texture": SubResource("AtlasTexture_cdvuv")
}],
"loop": false,
"name": &"buff",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqil2")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8jca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2rlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l25cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n24rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ajny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksits")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ctr57")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_bgxop")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_tkbbl")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_rd5bc")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_6tulj")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_0og7s")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng6c7")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6l36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q2ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp685")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqmlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqc6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru3ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2olb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7xoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xijh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mslov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh8il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3djh")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vpwl6"]
radius = 26.0
height = 118.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0qp2d"]
radius = 211.4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yr383"]
size = Vector2(101, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_7a3lg"]
radius = 112.0

[node name="SCOTTISH_GIANT" type="CharacterBody2D"]
z_index = 1
position = Vector2(917, 382)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_twu0j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(7, -10)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_x5cjf")
animation = &"attack"

[node name="CPUParticles2D" parent="AnimatedSprite2D" instance=ExtResource("6_yh2nl")]
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-1, -36)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vpwl6")

[node name="PlayerDection" type="Area2D" parent="."]
z_index = 2
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDection"]
z_index = 1
shape = SubResource("CircleShape2D_0qp2d")

[node name="Boss_1_ha" type="Area2D" parent="."]
z_index = 1
position = Vector2(-4, 57)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_1_ha"]
z_index = 1
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_yr383")

[node name="Boss_1_hb" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_1_hb"]
z_index = 1
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_7a3lg")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("5_q5ciu")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_ojpjm")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_trmrx")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_c1gms")

[node name="RockThrow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_tyopb")
rock_scene = ExtResource("11_1jyjx")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_mfomk")

[node name="Buff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_l3eq0")

[node name="Summon" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_5rd7g")
archer_scene = ExtResource("16_p1qas")
pike_scene = ExtResource("15_khsfs")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("17_jfo0l")

[node name="summon_cooldown" type="Timer" parent="."]
wait_time = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(1, 0.396078, 0, 1)
z_index = 3
offset_left = 855.0
offset_top = 69.0
offset_right = 1408.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
z_index = 3
offset_left = 1006.0
offset_top = 15.0
offset_right = 5954.0
offset_bottom = 1037.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 750
text = "Benandonner"
metadata/_edit_use_anchors_ = true

[node name="debug" type="Label" parent="CanvasLayer"]
offset_left = 1092.0
offset_top = 151.0
offset_right = 1136.0
offset_bottom = 174.0
scale = Vector2(1.48, 1)
text = "name"
metadata/_edit_use_anchors_ = true

[node name="CPUParticles2D" parent="." instance=ExtResource("17_qctr4")]
z_index = 1
position = Vector2(2, -26)
scale = Vector2(2.2, 2.2)
emitting = false

[node name="damage_cooldown" type="Timer" parent="."]
wait_time = 7.0

[node name="Buff_Time" type="Timer" parent="."]
wait_time = 10.0

[node name="aggressive" type="Timer" parent="."]
wait_time = 6.0

[node name="CPUParticles2D2" parent="." instance=ExtResource("20_tuhxs")]
z_index = 1

[node name="damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_ihdrh")

[node name="dasing" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="PlayerDection" to="FiniteStateMachine/Idle" method="_on_player_dection_body_entered"]
[connection signal="area_entered" from="Boss_1_hb" to="." method="_on_boss_1_hb_area_entered"]
[connection signal="timeout" from="summon_cooldown" to="FiniteStateMachine/Follow" method="_on_summon_cooldown_timeout"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="Buff_Time" to="FiniteStateMachine/Buff" method="_on_buff_time_timeout"]
[connection signal="timeout" from="aggressive" to="FiniteStateMachine/Follow" method="_on_aggressive_timeout"]
